fix contact section alignment

--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ section {
   justify-content: center;
   padding-left: 5.625em;
   height: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .test-container {
@@ -169,7 +169,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   color: #fff;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .hero-section .button {
@@ -196,7 +196,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   /* padding: 10px; */
   /* margin: 10px; */
 }
@@ -243,12 +243,6 @@ section {
 /* .button:hover {
   background-color: #005FC9;
 } */
-
-.contact-section {
-  width: 100%;
-  background-color: white;
-  border: 1px solid #fff;
-}
 
 .img {
   width: 100%;
@@ -301,10 +295,18 @@ section {
   object-fit: cover;
 }
 
+.contact-section {
+  /* width: 100%; */
+  background-color: white;
+  padding: 2em 5.625em;
+  border: 1px solid #fff;
+}
+
 .form {
   min-width: 300px;
   max-width: 500px;
-  width: 500px;padding: 10px;
+  width: 500px;
+  /* padding: 10px; */
 }
 
 .info {
@@ -328,7 +330,7 @@ form {
 
 label {
   display: block;
-  padding: 5px;
+  /* padding: 5px; */
   margin: 5px 0 5px 0;
 }
 
@@ -364,7 +366,7 @@ textarea {
   background-color: var(--brand-color);
   padding: 0.5em;
   border: none;
-  margin: 10px;
+  /* margin: 10px; */
   border-radius: 10px;
   cursor: pointer;
 }
